--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -33,7 +33,7 @@ header {
       .nav-links {
         font-size: 2.5rem;
         margin-top: 0.5rem;
-        padding: 2% 0 0 10vw;
+        padding: 3% 0 0 10vw;
       }
       .home-link {
         font-size: 3rem;
