--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -27,3 +27,16 @@
     text-align: center;
   }
 }
+
+// RESPONSIVE POST
+@media screen and (max-width: 1200px) {
+  .post-content {
+    padding: 3rem 2vw;
+    .post-category{
+      width: 15rem;
+    }
+    .post-body {
+      width: 80vw;
+    }
+  }
+}
